# vibe-guard

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  plan.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: cli.rs  config.rs  git.rs  indexer.rs  lib.rs  main.rs  report.rs  safety.rs  summary.rs
src/ast/: lang.rs  mod.rs  symbols.rs
src/engine/: classify.rs  mod.rs
src/intent/: heuristic.rs  mod.rs  ollama.rs  provider.rs
tests/: engine_tests.rs
